refactor(dsl): split bulkhead builder tests, dedupe varargs tags, document class-1 check
Three follow-ups to the step-1.5 review:

1. Move the paradigm-agnostic builder tests to BulkheadBuilderBaseTest in
   inqudium-config/src/test/java/eu/inqudium/config/dsl/. The base class
   logic — setter validation, preset values, preset-then-customize
   discipline, touch tracking, fluent return — is now tested in the
   module that owns the class. A small TestBuilder<ImperativeTag>
   subclass keeps the tests paradigm-agnostic without inventing a new
   sealed-permits subtype.

   DefaultImperativeBulkheadBuilderTest in inqudium-imperative shrinks
   to a single end-to-end smoke test. Imperative-specific tests grow
   here as paradigm-specific extensions land in later phases — strategy
   injection, adaptive-limit sub-builders.

2. tags(String...) now silently dedupes its varargs. Set.of(...) used
   to throw on duplicates, which forced callers to sanitize their input
   before calling the DSL. A fluent builder should be construction-
   friendly; tags form a Set semantically, so duplicates carry no
   information. The new behaviour is pinned by a test with a comment
   spelling out the rationale. The Set<String> overload is unchanged
   because Set itself disallows duplicates by definition.

3. The name validation in BulkheadBuilderBase's constructor gains a
   one-line comment marking it as ADR-027 class-1 — the snapshot's
   compact constructor enforces the same invariants, but the exception
   should point at the user's bulkhead("name", ...) call site, not at
   the later patch application.

inqudium-config tests grow from 79 to 105; inqudium-imperative DSL test
shrinks from 24 to 1. Full reactor verify is green.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>